--- a/bj2-master/src/main/resources/application.properties
+++ b/bj2-master/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost/webdb?serverTimezone=UTC
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:mysql://192.168.0.34:3306/webdb?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=webuser
 spring.datasource.password=webuser
