--- a/b4-main/src/main/resources/application.properties
+++ b/b4-main/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 
+spring.datasource.url=jdbc:mysql://localhost/mydb?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=14919
+
+mybatis.mapper-locations=classpath:/mappers/*.xml
+mybatis.type-aliases-package=org.zerock.b4.dto
+
+logging.level.org.springframework=info
+logging.level.org.zerock=debug
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=C:\\webserver\\nginx-1.24.0\\html
+spring.servlet.multipart.location=User/jsj/nginx
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
-org.zerock.upload.path=C:\\webserver\\nginx-1.24.0\\html
+org.zerock.upload.path=Users/jsj/nginx
