--- a/b4-main/src/main/resources/application.properties
+++ b/b4-main/src/main/resources/application.properties
@@ -11,8 +11,8 @@ logging.level.org.springframework=info
 logging.level.org.zerock=debug
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=User/jsj/nginx
+spring.servlet.multipart.location=/Users/jsj/nginx
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
-org.zerock.upload.path=Users/jsj/nginx
+org.zerock.upload.path=/Users/jsj/nginx
