--- a/b4-main/build.gradle
+++ b/b4-main/build.gradle
@@ -31,15 +31,13 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'net.coobird:thumbnailator:0.4.19'
 
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
-
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 
-	implementation 'mysql:mysql-connector-java:8.0.33'
 }
 
 tasks.named('test') {
