--- a/b52/src/main/resources/application.properties
+++ b/b52/src/main/resources/application.properties
@@ -1,5 +1,26 @@
 
-
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
 logging.level.org.springframework.security=trace
+
+spring.datasource.url=jdbc:mysql://192.168.0.34:3306/webdb?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=webuser
+spring.datasource.password=webuser
+
+mybatis.mapper-locations=classpath:/mappers/*.xml
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect_uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-id=7fa68471d43dd199b9251fb853d0bea4
+
+
+spring.security.oauth2.client.registration.kakao.client-secret=3YtIP6wLktTciaFouzSI8ojleCKpiEaH
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
