--- a/jt1/build.gradle
+++ b/jt1/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
+}
+
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.1'
@@ -30,14 +37,43 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+
 	testCompileOnly 'org.projectlombok:lombok'
 
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
 	implementation 'org.modelmapper:modelmapper:3.1.1'
+
+	annotationProcessor(
+
+			"jakarta.persistence:jakarta.persistence-api",
+
+			"jakarta.annotation:jakarta.annotation-api",
+
+			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
 }
+
+
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+sourceSets {
+	main {
+		java {
+			srcDirs = ["$projectDir/src/main/java",
+					   "$projectDir/build/generated/sources/annotationProcessor/java/main"]
+		}
+	}
+}
+//task deleteBuild(type : Delete){
+//	delete "$buildDir/generated-sources/annotations/"
+//}
+
+//compileJava.dependsOn('clean')
+//compileTestJava.dependsOn('clean')
