--- a/jt1/build.gradle
+++ b/jt1/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
 
 	testCompileOnly 'org.projectlombok:lombok'
