--- a/jt1/build.gradle
+++ b/jt1/build.gradle
@@ -1,9 +1,8 @@
 buildscript {
-	ext {
-		queryDslVersion = "5.0.0"
-	}
+    ext {
+        queryDslVersion = "5.0.0"
+    }
 }
-
 
 plugins {
 	id 'java'
@@ -37,46 +36,43 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-
-	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
-
 	testCompileOnly 'org.projectlombok:lombok'
-
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 
-	annotationProcessor(
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
 
-			"jakarta.persistence:jakarta.persistence-api",
+    annotationProcessor(
+        "jakarta.persistence:jakarta.persistence-api",
 
-			"jakarta.annotation:jakarta.annotation-api",
+        "jakarta.annotation:jakarta.annotation-api",
 
-			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
+        "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
+		)
+	
+	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
 }
-
-
-
-
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
 sourceSets {
-	main {
-		java {
-			srcDirs = ["$projectDir/src/main/java",
-					   "$projectDir/build/generated/sources/annotationProcessor/java/main"]
-		}
-	}
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java", 
+			"$projectDir/build/generated/sources/annotationProcessor/java/main"]
+        }
+    }
 }
-//task deleteBuild(type : Delete){
-//	delete "$buildDir/generated-sources/annotations/"
-//}
 
-//compileJava.dependsOn('clean')
-//compileTestJava.dependsOn('clean')
+task deleteBuild(type: Delete){
+	delete "$projectDir/build/generated/sources/annotations/"
+}
+
+compileJava.dependsOn('deleteBuild: clean')
+// compileTestJava.dependsOn('clean')
