--- a/jt1/src/main/resources/application.properties
+++ b/jt1/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-
-
-spring.datasource.url=jdbc:mysql://localhost/mydb?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=Asia/Seoul
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=14919
@@ -8,8 +6,7 @@ spring.datasource.password=14919
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true 
-org.hibernate.SQL=debug
+#org.hibernate.SQL=debug
 
-#spring.jpa.defer-datasource-initialization=true 
-#spring.sql.init.data-locations=classpath:import.sql
-#spring.sql.init.schema-locations=classpath:schema.sql 
+# spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.data-locations=classpath:import.sql
